Spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,6 +105,6 @@ button {
 .green {
   display: inline;
   width: 15%;
-  margin-left: 10%;
+  margin: auto;
   background: #7CD05D;
 }
